added catppuccin colors

--- a/toolbar.ini
+++ b/toolbar.ini
@@ -39,6 +39,6 @@
 #
 #
 [Minimal]
-toolbarLeft1=SAVE,NEW,OPEN,SAVEPDF,INSERT_NEW_PAGE,DELETE_CURRENT_PAGE,UNDO,REDO,HAND,GOTO_BACK,GOTO_NEXT,CUT,COPY,PASTE,FULLSCREEN,ZOOM_IN,ZOOM_SLIDER,ZOOM_OUT,ZOOM_FIT,ZOOM_100,PAGE_SPIN
-toolbarLeft2=VERY_THICK,THICK,MEDIUM,FINE,VERY_FINE,PEN,ERASER,HIGHLIGHTER,SELECT_REGION,SEPARATOR,COLOR_SELECT,COLOR(6),COLOR(0),COLOR(10),COLOR(4),COLOR(1),ROTATION_SNAPPING,SEPARATOR,GRID_SNAPPING,TEXT,RULER,DRAW_ELLIPSE
+toolbarLeft1=SAVE,NEW,OPEN,SAVEPDF,INSERT_NEW_PAGE,DELETE_CURRENT_PAGE,UNDO,REDO,HAND,GOTO_BACK,GOTO_NEXT,CUT,COPY,PASTE,FULLSCREEN,ZOOM_IN,ZOOM_SLIDER,ZOOM_OUT,ZOOM_FIT,ZOOM_100,SEPARATOR,ROTATION_SNAPPING,GRID_SNAPPING
+toolbarLeft2=VERY_THICK,THICK,MEDIUM,FINE,VERY_FINE,PEN,HIGHLIGHTER,SEPARATOR,COLOR_SELECT,COLOR(0),COLOR(11),COLOR(5),COLOR(7),COLOR(6),COLOR(8),COLOR(9),COLOR(10),COLOR(1),COLOR(2),COLOR(3),COLOR(4),SEPARATOR,TEXT,RULER,DRAW_ELLIPSE
 name=Minimal
